# zvi-summaries

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: update-feed.yml
data/: cache.json
docs/: feed.xml
src/zvi_summaries/: cache.py  fetch.py  generate.py  main.py  summarize.py
tests/: test_cache.py  test_fetch.py  test_generate.py  test_summarize.py
